<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@color/bluePrimary" />

    <ImageView
        android:id="@+id/cloudsIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/toolBar"
        app:layout_constraintBottom_toBottomOf="@id/toolBar"
        app:layout_constraintStart_toStartOf="@id/toolBar"
        app:layout_constraintEnd_toEndOf="@id/toolBar"
        android:background="@drawable/ic_clouds" />

    <ImageView
        android:id="@+id/coinIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolBar"
        app:layout_constraintBottom_toBottomOf="@id/toolBar"
        app:layout_constraintStart_toStartOf="@id/toolBar"
        app:layout_constraintEnd_toEndOf="@id/toolBar"
        android:background="@drawable/coin" />

    <TextView
        android:id="@+id/headerTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/coinIv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/promptTv"
        android:text="@string/login"
        android:textAppearance="@style/header" />

    <TextView
        android:id="@+id/promptTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/headerTv"
        app:layout_constraintStart_toStartOf="@id/authAppleBtn"
        app:layout_constraintEnd_toEndOf="@id/authMailBtn"
        app:layout_constraintBottom_toTopOf="@id/authAppleBtn"
        android:textAppearance="@style/prompt"
        android:gravity="center"
        android:text="@string/loginPrompt"/>

    <ImageButton
        android:id="@+id/authAppleBtn"
        android:layout_width="50sp"
        android:layout_height="50sp"
        app:layout_constraintTop_toBottomOf="@id/promptTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/authGoogleBtn"
        app:layout_constraintBottom_toTopOf="@id/emailLabelTv"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginEnd="13sp"
        android:src="@drawable/ic_apple"
        android:background="@drawable/bg_auth_btn" />

    <ImageButton
        android:id="@+id/authGoogleBtn"
        android:layout_width="50sp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/authAppleBtn"
        app:layout_constraintStart_toEndOf="@id/authAppleBtn"
        app:layout_constraintEnd_toStartOf="@id/authFacebookBtn"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginEnd="13sp"
        android:src="@drawable/ic_google"
        android:background="@drawable/bg_auth_btn" />

    <ImageButton
        android:id="@+id/authFacebookBtn"
        android:layout_width="50sp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/authAppleBtn"
        app:layout_constraintStart_toEndOf="@id/authGoogleBtn"
        app:layout_constraintEnd_toStartOf="@id/authMailBtn"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:src="@drawable/ic_facebook"
        android:background="@drawable/bg_auth_btn" />

    <ImageButton
        android:id="@+id/authMailBtn"
        android:layout_width="50sp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/authAppleBtn"
        app:layout_constraintStart_toEndOf="@id/authFacebookBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginStart="13dp"
        android:src="@drawable/ic_mail"
        android:background="@drawable/bg_auth_btn" />

    <TextView
        android:id="@+id/emailLabelTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/mailTil"
        app:layout_constraintTop_toTopOf="@id/mailTil"
        app:layout_constraintStart_toStartOf="@id/mailTil"
        android:elevation="1sp"
        android:textAppearance="@style/label"
        android:text="@string/email"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mailTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/authAppleBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/passwordLabelTv"
        app:layout_constraintVertical_bias="0.7"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        app:boxBackgroundColor="@color/white"
        app:placeholderText="@string/email_text_view_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/passwordLabelTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/passwordTil"
        app:layout_constraintTop_toTopOf="@id/passwordTil"
        app:layout_constraintStart_toStartOf="@id/passwordTil"
        android:textAppearance="@style/label"
        android:text="@string/password"
        android:elevation="1sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/authAppleBtn"
        app:layout_constraintStart_toStartOf="@id/mailTil"
        app:layout_constraintEnd_toEndOf="@id/mailTil"
        app:layout_constraintBottom_toTopOf="@id/agreementPromptTv"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        app:boxBackgroundColor="#FFFFFF"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/passwordTil"
        app:layout_constraintStart_toStartOf="@id/mailTil"
        app:layout_constraintEnd_toEndOf="@id/mailTil"
        app:layout_constraintBottom_toTopOf="@id/agreementPromptTv"
        app:layout_constraintVertical_bias="0.3"
        app:cornerRadius="6sp"
        android:padding="14sp"
        android:text="@string/login"
        android:textAppearance="@style/buttonText"/>

    <TextView
        android:id="@+id/agreementPromptTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/termsTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="@style/prompt"
        android:textSize="13sp"
        android:text="@string/agreement" />

    <TextView
        android:id="@+id/termsTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/andTv"
        app:layout_constraintEnd_toStartOf="@id/andTv"
        android:textAppearance="@style/prompt"
        android:textSize="13sp"
        android:textColor="@color/bluePrimary"
        android:text="@string/terms"/>

    <TextView
        android:id="@+id/andTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/loginBtn"
        app:layout_constraintStart_toStartOf="@id/agreementPromptTv"
        app:layout_constraintEnd_toEndOf="@id/agreementPromptTv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.7"
        android:paddingRight="4sp"
        android:paddingLeft="4sp"
        android:textAppearance="@style/prompt"
        android:textSize="13sp"
        android:text="@string/and"/>

    <TextView
        android:id="@+id/privacyTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/andTv"
        app:layout_constraintStart_toEndOf="@id/andTv"
        android:textAppearance="@style/prompt"
        android:textSize="13sp"
        android:textColor="@color/bluePrimary"
        android:text="@string/privacy"/>

</androidx.constraintlayout.widget.ConstraintLayout>